# Practica-0-2025

./: CMakeLists.txt  README.md  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
